my second commit

--- a/index.html
+++ b/index.html
@@ -69,53 +69,32 @@
     </div>
     </div>
     </div>
-    <div class="testimonials">
-        <div class="inner">
-            <h1>Testimonials</h1>
-            <div class="border"></div>
+    <h1 style="text-align: center;">Teatimonials</h1>
+    <div class="tes">
+        <div>
+            <img src="images/th.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
 
-            <div class="row">
-                <div class="col">
-                    <div class="testimonial">
-                        <img src="images/th (1).jpg" alt="">
-                        <div> class="name">Full Name</div>
-                        
-                        <div class="stars">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, saepe.</p>
-                </div>
-                <div class="col">
-                    <div class="testimonial">
-                    <div class="testimonial">
-                        <img src="images/th.jpg" alt="">
-                        <div class="name">Full Name</div>
-                        <div class="stars">
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
-            </div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt repellat incidunt quas molestiae. Eveniet, dolore.</p>
         </div>
-        <div class="col">
-            <div class="testimonial">
-                <img src="images/th (2).jpg" alt="">
-                <div class="name">Full Name</div>
-                <div class="stars">
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-
+        <div>
+            <img src="images/th (1).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+        </div>
+        <div>
+            <img src="images/th (2).jpg" alt="">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+        </div>
     </div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam animi est voluptatibus dolorem illum architecto quia doloribus. Facere, non at?</p>
     </main>
     <footer>
         <div class="footer">
